# ScanForge

./: .dockerignore  .env.example  .gitignore  123.sh  Dockerfile  README.md  README_ROADMAP.md  docker-compose.yml  requirements.txt  run-server.sh  run-sync-kb.sh  run-tests.sh  run-worker.sh
qa_portal/: __init__.py  ai_review.py  analysis.py  app.py  audit.py  auth.py  compliance.py  config.py  dependency_analysis.py  environment.py  finding_lifecycle.py  hardware.py  i18n.py  integrations.py  knowledge_base.py  models.py  network.py  parser_security.py  pipeline.py  presets.py  release_gate.py  reporting.py  runtime.py  runtime_logs.py  runtime_scans.py  sarif.py  storage.py  tooling.py  ubuntu_validation.py  web_smoke.py  worker.py
scripts/: generate-systemd-units.sh  install-desktop-shortcut.sh  launch-scanforge-desktop.sh  run-web-smoke.sh  scanforge-ci-agent.sh  scanforge-lib.sh  scanforge-preflight.sh  setup-scanforge.sh  start-scanforge-admin.sh  stop-scanforge-admin.sh
tests/: assert.sh  test_123.sh  test_ai_review.py  test_audit.py  test_auth.py  test_desktop_launch.py  test_entrypoints.py  test_environment.py  test_hardware.py  test_knowledge_base.py  test_network.py  test_parser_security.py  test_portal_analysis.py  test_portal_app.py  test_reporting.py  test_runtime.py  test_sarif.py  test_security_regression_fixtures.py  test_tooling.py  test_ubuntu_2204_matrix.py  test_ubuntu_validation.py  (+1 more)
tests/fixtures/sample_qt_project/: CMakeLists.txt
tests/fixtures/sample_qt_project/src/: main.cpp
tests/fixtures/sample_qt_project/tests/: test_widget.cpp
(+10 files in other folders)
